--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,26 +2,30 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-    "lib": ["es5", "es6", "dom"],
-    "moduleResolution": "node",
+    "lib": ["es6"],
     "allowJs": true,
     "outDir": "build",
-    "rootDir": "src",
+    "rootDir": "./",
+
     "strict": true,
     "noImplicitAny": true,
     "strictPropertyInitialization": false,
     "baseUrl": "./",
     "paths": {
       "@config/*": ["src/config/*"],
-      "@modules/*": ["src/modules/*"],
-      "@shared/*": ["src/shared/*"]
+      "@UseCases/*": ["src/UseCases/*"],
+      "@shared/*": ["src/shared/*"],
+      "@repositories/*": ["src/repositories/*"],
+      "@database/*": ["src/database/*"]
     },
-    "typeRoots": ["./src/@types", "./node_modules/@types"],
+    "typeRoots": ["@types", "./node_modules/@types"],
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "include": ["./jest.config.ts", "./src/**/*.ts"],
+  "exclude": ["./node_modules"]
 }
